[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/hud/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
margin_right = 100.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="HealthBar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HealthBarBG" type="ColorRect" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="HealthBarFG" type="ColorRect" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 0.713726, 0.713726, 1 )

[node name="Ammo" type="GridContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 20
